--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
@@ -18,11 +18,11 @@
 <body>
   <div class="background"></div>
   <div class="logo">
-    <img src="/images/logo.svg" alt="Huddle Logo">
+    <img src="logo.svg" alt="Huddle Logo">
   </div>
   <div class="container">
     <div class="photos">
-      <img src="/images/illustration-mockups.svg" alt="Website Design Illustration">
+      <img src="illustration-mockups.svg" alt="Website Design Illustration">
     </div>
     <div class="text">
       <h1>Build The Community Your Fans Will Love</h1>
